--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/raylib"]
 	path = third_party/raylib
 	url = https://github.com/raysan5/raylib.git
+[submodule "third_party/box2d"]
+	path = third_party/box2d
+	url = https://github.com/erincatto/box2d.git
